# Calculus-Constructio

./: README.md  app.py  pyproject.toml
calculus_constructio/: cat.cns  divide_by_two.cns  main.py  random_0_or_1.cns  sample_input_point.txt  sample_input_str.txt
calculus_constructio/classes/: constructions.py  errors.py  flags.py  instructions.py
templates/: interpreter.html
