[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "calculus-constructio"
dynamic = ["version"]
dependencies = ["sympy"]
description = "Calculus Constructio programming language"

[project.scripts]
calculus_constructio = "calculus_constructio.main:main"
